Subindo para o git

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My index</title>
+    <title>Hey Everyone!</title>
 </head>
 <body>
-    <h1>Hey everyone!</h1>
+    <h1>Olá!</h1>
     <hr>
-    <p>Loading...</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptates nam a veniam laboriosam. Illum ratione recusandae culpa hic ut molestiae blanditiis aut quia ducimus. Quidem sit nobis dolores praesentium!</p>
 </body>
 </html>
